menu-container z-index correction

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ body {
 																				
 
 #menu-container {
-	z-index: 0;
+	z-index: -1;
 	top: 0;
 	width: 100%;
 	min-height: 100%;
